--- a/src/components/CardNota/estilo.css
+++ b/src/components/CardNota/estilo.css
@@ -1,15 +1,9 @@
-.card-nota {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-    background-color: var(--gray);
+.card-nota {    background-color: var(--gray);
     border-radius: 4px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
     padding: 16px;
-    margin-right: 50px;
+    margin: 0 25px 50px;
+    width: 150px;
 }
 
 .card-nota_cabecalho {
