--- a/src/components/FormularioCadastro/estilo.css
+++ b/src/components/FormularioCadastro/estilo.css
@@ -1,7 +1,7 @@
 .formulario-cadastro {
   padding: 30px 50px 0;
 
-  flex: 1;
+  flex: 2;
 }
 
 .formulario-cadastro input,
@@ -24,7 +24,8 @@
 }
 
 .formulario-cadastro .button-container button {
-  width: 180px;
+  width: 50%;
+  min-width: 130px;
   padding: 6px;
   font-size: 0.95em;
   
