--- a/src/components/CardNota/estilo.css
+++ b/src/components/CardNota/estilo.css
@@ -2,24 +2,30 @@
     border-radius: 4px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
     padding: 16px;
-    margin: 0 25px 50px;
-    width: 150px;
+    margin: 0 20px 40px;
+    width: 170px;
 }
 
 .card-nota_cabecalho {
-    font-size: 1.1em;
+    font-size: 15px;
+    line-height: 22px;
     
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.card-nota_texto {
-    margin-top: 8px;
-    font-size: 1em;
-}
-
 .card-nota_titulo {
     font-size: 1.2em;
-    margin-right: 12px;
+}
+
+.card-nota_categoria {
+    margin-top: 8px;
+    font-size: 14px;
+}
+
+.card-nota_texto {
+    margin-top: 8px;
+    font-size: 14px;
+    line-height: 18px;
 }
